# pico_camera

./: CMakeLists.txt  README.md  pico_camera.SchDoc
__Previews/: pico_camera.SchDocPreview
main/: board.c  board.h  main.c
main/lcd/: font.h  lcd.c  lcd.h
main/ov7725/: ov7725.c  ov7725.h  ov7725config.h
